adjust native image command

--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -35,7 +35,7 @@
                     <div style="margin-bottom: 50px;">
                         <i>ili2gpkg web service</i>
                         <p>Konvertiert eine INTERLIS-Transferdatei in eine GeoPackage-Datei. Die Modelle werden in den Standard-INTERLIS-Modellablagen gesucht. Fehlende Modelle können zusammen mit der Transferdatei gezippt hochgeladen werden.</p>
-                        <p>Die Konvertierung kann einige Minuten dauern. Die Resultatedatei wird automatisch zum Download bereitgestellt.</p>
+                        <p>Die Konvertierung kann je nach Datenmenge einige Minuten dauern. Die Resultatedatei wird automatisch zum Download bereitgestellt.</p>
                     </div>
 			    <!-- 
 	                <div class="card border-info">
